Fixed bug #77184

The U in URATIONAL is for unsigned, so the values should be printed
as unsigned.